# StatStarters

./: .gitignore  CMakeLists.txt  README.md
includes/: Api.h  App.h  Display.h  DisplayOutput.h  ESPNFantasyAPI.h  ErrorHandler.h  Fantasy.h  League.h  Member.h  Optimize.h  Player.h  ProcessComm.h  Ui.h  main.h  strings.h  term.h
src/: App.cc  App.cpp  Display.cc  Display.cpp  ESPNFantasyAPI.cpp  ErrorHandler.cc  ErrorHandler.cpp  League.cpp  Main.cc  Member.cpp  Optimize.cc  main.cpp  term.cpp
src/FantasyApi/: Api.cc  Api.cpp  Fantasy.cc  Fantasy.cpp
src/Objects/: League.cc  League.cpp  Member.cc  Member.cpp  Player.cc  Player.cpp
src/UI/: DisplayOutput.cc  ProcessComm.cc  Ui.cc
